<resources>
    <string name="app_name">StudentLifeSimulator</string>
    <string name="marathon_study_btn">Marathon Study</string>
    <string name="study_btn">Study</string>
    <string name="quick_study_btn">Quick Study</string>
    <string name="hibernate_btn">Hibernate</string>
    <string name="sleep_btn">Sleep</string>
    <string name="nap_btn">Nap</string>
    <string name="energy_lbl">Energy</string>
    <string name="background_desc">The student\'s apartment</string>
    <string name="desk_desc">The student\'s desk and monitor</string>
    <string name="edit_btn_desc">Button to edit the student</string>
    <string name="student_desc">The student</string>
    <string name="register_btn">REGISTER</string>
    <string name="character_save_btn">Save</string>
    <string name="new_game_btn">New Game</string>
    <string name="menu_desc">Select courses to be enrolled in</string>
    <string name="attend_btn">Attend</string>
    <string name="listen_btn">Listen</string>
    <string name="talk_btn">Gossip</string>
    <string name="skip_class_btn">Skip Class</string>
    <string name="continue_game_btn">Continue</string>
    <string name="credits_btn">Credits</string>
    <string name="dialog_credits">
        Alex Kitt\nCaleb Beynon\nHaotian Chen\nKyle Calinisan\nOghenekome Egbedi
    </string>

    <string name="character_customization_desc">Customize your character</string>

    <string name="placeholder_btn_desc">Non-functional button for refining the layout</string>

    <string name="eyes_blue_btn_desc">Button to give your character blue eyes</string>
    <string name="eyes_brown_btn_desc">Button to give your character brown eyes</string>
    <string name="eyes_green_btn_desc">Button to give your character green eyes</string>
...
